fixed horizontal scroll issue

--- a/components/Layout/Footer/style.module.css
+++ b/components/Layout/Footer/style.module.css
@@ -2,7 +2,7 @@
 	background-color: #bbdefb;
 	color: var(--gray);
 	margin-left: calc(50% - 50vw);
-	width: 100vw;
+	width: calc(100vw - 8px);
 	padding: 1.25rem 0;
 }
 
@@ -13,6 +13,7 @@
 
 .footer, .footer * {
 	box-sizing: border-box; /* should be added in global css, makes writing css a lot easier.*/
+	outline: 1px solid red;
 }
 
 .footerLogo {
